even MORE internal changes + more documentation

--- a/blacksmith-docs/docs/anvil/overview.mdx
+++ b/blacksmith-docs/docs/anvil/overview.mdx
@@ -17,6 +17,16 @@ To learn more about TrajectorySequences & Roadrunner in general, check out [lear
 [Visual explanation of TrajectorySequences](https://www.youtube.com/watch?v=BF_C4szJ4vU)
 :::
 
+:::tip
+**You can check out our [codebase](https://github.com/RR-9527/robot-code-v2/) in
+TeamCode to see how Anvil is used in actual code & how it's used with other parts
+of Blacksmith**
+
+The majority code is in Kotlin, but many/most of the concepts remain the same.
+
+Read the docs still though.
+:::
+
 ## What is Anvil?
 
 Anvil is a wrapper around Roadrunner `v0.5.x`'s [TrajectorySequenceBuilder](https://learnroadrunner.com/trajectory-sequence.html)
