--- a/blacksmith-docs/docs/black-op/create-on-go-java.mdx
+++ b/blacksmith-docs/docs/black-op/create-on-go-java.mdx
@@ -96,3 +96,13 @@ class MyWife {
     }
 }
 ```
+
+## Practical example
+
+[Link to Java example](https://github.com/RR-9527/robot-code-v2/blob/master/TeamCode/src/main/java/org/firstinspires/ftc/teamcode/opmodes/JavaBlacksmithTesting.java)
+
+You can check our the Kotlin version as well if you want to see how we *really* use it, but the
+syntax is much different for CreateOnGo/EvalOnGo
+
+[Link to Kotlin example](https://github.com/RR-9527/robot-code-v2/blob/master/TeamCode/src/main/kotlin/org/firstinspires/ftc/teamcodekt/opmodes/teleop/RogueBaseTele.kt)
+
