--- a/blacksmith-docs/docs/black-op/create-on-go-kt.mdx
+++ b/blacksmith-docs/docs/black-op/create-on-go-kt.mdx
@@ -96,3 +96,9 @@ as the method parameters are <ins>**NOT type safe**</ins>
   type: 'T',
   desc: 'The object returned by the given lambda',
 }}/>
+
+## Practical example
+
+We use it extensively in our base opmodes, especially our base TeleOp
+
+[Link to our base TeleOp](https://github.com/RR-9527/robot-code-v2/blob/master/TeamCode/src/main/kotlin/org/firstinspires/ftc/teamcodekt/opmodes/teleop/RogueBaseTele.kt)
