--- a/blacksmith-docs/docs/scheduler-api/overview.mdx
+++ b/blacksmith-docs/docs/scheduler-api/overview.mdx
@@ -9,6 +9,16 @@ import TabItem from '@theme/TabItem';
 
 # Overview
 
+:::tip
+**You can check out our [codebase](https://github.com/RR-9527/robot-code-v2/) in
+TeamCode to see how the Scheduler is used in actual code & how it's used with other parts
+of Blacksmith**
+
+The majority code is in Kotlin, but many/most of the concepts remain the same.
+
+Read the docs still though.
+:::
+
 ## What is the Scheduler API?
 
 It's a small library that streamlines the creation of both your autos and **especially your TeleOps!**
@@ -170,6 +180,3 @@ A very nice part of [BlackOp](../black-op/create-on-go-kt). There's a `@CreateOn
 ### Wth is a ReforgedGamepad or `codriver.a.onRise`??
 
 Read on, it's described in the docs in a little bit. Or click [here.](./reforged-gamepad)
-
-### What is 'x'?
-it's probably described in the docs somewhere, I can't list everything, sorry.
