--- a/blacksmith-docs/docs/scheduler-api/reforged-gamepad.mdx
+++ b/blacksmith-docs/docs/scheduler-api/reforged-gamepad.mdx
@@ -280,3 +280,9 @@ if the abs value is greater than the deadzone.
 </Tabs>
 
 It's a relatively simple class, but it's powerful nevertheless.
+
+## Practical usage example
+
+These are in Kotlin, but the concept still carries through to Java
+ - [Our single-player TeleOp](https://github.com/RR-9527/robot-code-v2/blob/master/TeamCode/src/main/kotlin/org/firstinspires/ftc/teamcodekt/opmodes/teleop/RogueTestingOp.kt)
+ - [Our two-player TeleOp](https://github.com/RR-9527/robot-code-v2/blob/master/TeamCode/src/main/kotlin/org/firstinspires/ftc/teamcodekt/opmodes/teleop/RogueCompOp.kt)
