--- a/blacksmith-docs/docs/overview.mdx
+++ b/blacksmith-docs/docs/overview.mdx
@@ -1,5 +1,5 @@
 ---
-sidebar_position: -1
+sidebar_position: 0
 description: An overview of Blacksmith and it's facilities, such as the Scheduler API, Anvil, BlackOp, it's Kalman Filters, and more!
 keywords: [scheduler, anvil, blackop, overview, kalman filter, utils, demo]
 ---
@@ -49,9 +49,11 @@ The Blacksmith Library provides a few different things:
 
 I recommend checking those out for examples of each.
 
+:::tip
 **If you use Kotlin (or even if you don't honestly), I highly recommend checking out our
 [codebase](https://github.com/RR-9527/robot-code-v2/) in TeamCode to see how Blacksmith is used in
 actual code**
+:::
 
 Here's a basic example of a TeleOp before and after using Blacksmith:
 
