--- a/blacksmith-docs/docs/random-tips.mdx
+++ b/blacksmith-docs/docs/random-tips.mdx
@@ -1,5 +1,5 @@
 ---
-sidebar_position: 1
+sidebar_position: 3
 ---
 
 # A couple random tips
@@ -10,7 +10,7 @@ learn programming- rather they just learn the FTC SDK, and don't go much deeper.
 Here are just a couple very random tips that should make Blacksmith easier to learn/use.
 
 1. One of the most important parts of being a programmer is learning to problem solve. Using resources,
-debugging techniques such as logging, etc. is a very important skill, and one can't rely on just asking
+debugging techniques such as logging, etc., is a very important skill, and you can't rely on just asking
 questions hoping to get their problem solved for them.
 
 2. To go to the source code of a class or where a variable was defined or something, hover over a class
@@ -25,4 +25,8 @@ the hood*
 
 5. Take a little bit of time to actually learn Java and Android Studio so that you aren't just bumbling
 around, hoping to chance upon the right solution. This seems a bit obvious, but not enough people
-actually do this.
+actually do this. If you're going to spend the next year or more of your life working with a tool,
+why not do yourself a favor and actually learn it?
+
+6. Take a little bit of time to make your code neater and more clear; future you is not present you,
+and future you will really thank you.
