--- a/blacksmith-docs/docs/scheduler-api/timer.mdx
+++ b/blacksmith-docs/docs/scheduler-api/timer.mdx
@@ -499,3 +499,12 @@ export function ReturnsItself() {
     }}/>
   );
 }
+
+## Practical usage example
+
+We use `Timer.after()` in all of our [Task Chains](../util/task-chains), feel free to take a look
+through them:
+
+(They're in Kotlin, but they look similar to the Java version and the concepts carry forwards)
+
+[Link to all of the Chains](https://github.com/RR-9527/robot-code-v2/tree/master/TeamCode/src/main/kotlin/org/firstinspires/ftc/teamcodekt/components/chains)
