--- a/blacksmith-docs/docs/offline-usage.mdx
+++ b/blacksmith-docs/docs/offline-usage.mdx
@@ -12,6 +12,8 @@ open the documentation site with your wifi on, wait for like 30 seconds or so, t
 off/connect to your bot's wifi, and then you'll notice the whole site works perfectly fine
 both online and offline, as long as you don't exit the site. Refreshing is fine.
 
+If this doesn't work, use method two.
+
 :::tip
 If you try to open a new doc tab, you'll notice it'll require an internet connection even if the
 original tab works perfectly well offline.
@@ -22,3 +24,10 @@ that'll work perfectly fine offline as well
 
 ## Method 2:
 
+If the above doesn't work, you can always install it as an app, and it *should* continue to work
+offline no matter what, but I hold no guarantee.
+
+Now, the method of installation can differ between devices/browsers so I'll let you look up how to
+install it yourself, but I promise to you it shouldn't take more than 1 or 2 clicks.
+
+Google 'How to install a progressive web app on <insert browser/os/whatever here>'
