--- a/blacksmith-docs/docs/random-tips.mdx
+++ b/blacksmith-docs/docs/random-tips.mdx
@@ -7,7 +7,7 @@ sidebar_position: 3
 One thing I see a lot in FTC programming is that a lot of people don't take the time to really
 learn programming- rather they just learn the FTC SDK, and don't go much deeper.
 
-Here are just a couple very random tips that should make Blacksmith easier to learn/use.
+Here are just a couple very random tips for people newer to programming:
 
 1. One of the most important parts of being a programmer is learning to problem solve. Using resources,
 debugging techniques such as logging, etc., is a very important skill, and you can't rely on just asking
