ready for release??

--- a/blacksmith-docs/docs/overview.mdx
+++ b/blacksmith-docs/docs/overview.mdx
@@ -45,7 +45,7 @@ The Blacksmith Library provides a few different things:
  - [Kalman Filters](./util/kalmanfilters/kalmanfilter-object) - Helps improve encoder readings
   (by potentially a lot) by dampening noise. Helped improve our own auto's localization a lot,
   and solved a lot of our lift issues.
- - And a decent amount of [utilities...](/util/overview)
+ - And a decent amount of [utilities...](/util/overview), including a few cool MeepMeep utilities
 
 I recommend checking those out for examples of each.
 
@@ -164,7 +164,8 @@ Here's a basic example of a TeleOp before and after using Blacksmith:
 </Tabs>
 
 As you can see, the Blacksmith version is much different, but it's much more readable and easier to make changes to.
-It's easy to learn and only requires medium-level knowledge of Java.
+It's easy to learn and only requires a little knowledge of Java (Shouldn't be much you haven't seen
+in RoadRunner and other libraries).
 
 ## I don't want to use *all* of this magic
 
