--- a/blacksmith-docs/docs/util/kalmanfilters/kalmanfilter-localizers.mdx
+++ b/blacksmith-docs/docs/util/kalmanfilters/kalmanfilter-localizers.mdx
@@ -8,6 +8,11 @@ import TabItem from '@theme/TabItem';
 
 # Kalman Filter Localizers
 
+:::danger
+This section assumes you'e already set up the roadrunner localizers from (LearnRoadRunner)[https://learnroadrunner.com/dead-wheels.html].
+You can, ofc, use Kalman filters directly as well for your own custom localizers.
+:::
+
 Kalman filters are great tools for the mechanisms on your robot, but they're great on your localizer as well! The standard run-of-the-mill two wheel and three wheel tracking localizer has been extended to by adding Kalman filters on each of the localizer's outputs.
 Doing this reduces the drift of the robot and should help make your autonomous more reliable.
 
@@ -44,14 +49,13 @@ To use your three wheel Kalman localizer, edit the fields as seen above in `Kalm
 It's pretty much the same thing as for the two wheel localizer but with a few name changes.
 
 ```java
-    // The 'this' refers to the SampleMecanumDrive (or whatever) you're inside
-    setLocalizer(new KalmanThreeWheelLocalizer(new StandardTrackingWheelLocalizer(hardwareMap, this))
-      .setHeadingFilterCoeffs(R0, Q0)
+    setLocalizer(new KalmanThreeWheelLocalizer(new StandardTrackingWheelLocalizer(hardwareMap))
       .setWheelPos1FilterCoeffs(R1, Q1)
       .setWheelPos2FilterCoeffs(R2, Q2)
-      .setHeadingVelocityFilterCoeffs(R3, Q3)
+      .setWheelPos3FilterCoeffs(R3, Q3)
       .setWheelPos1VelocityFilterCoeffs(R4, Q4)
       .setWheelPos2VelocityFilterCoeffs(R5, Q5));
+      .setWheelPos3VelocityFilterCoeffs(R6, Q6));
 ```
 
 Of course, set `R0`-`R5` and `Q0`-`Q5` to whatever values you have tuned.
