--- a/blacksmith-docs/docs/util/kalmanfilters/kalmanfilter-localizers.mdx
+++ b/blacksmith-docs/docs/util/kalmanfilters/kalmanfilter-localizers.mdx
@@ -32,7 +32,7 @@ To use your two wheel Kalman localizer, edit the fields as seen above in `Kalman
 
 ```java
     // The 'this' refers to the SampleMecanumDrive (or whatever) you're inside
-    setLocalizer(new KalmanTwoWheelLocalizer(new TwoWheelTrackingLocalizer(hardwareMap, this)
+    setLocalizer(new KalmanTwoWheelLocalizer(new TwoWheelTrackingLocalizer(hardwareMap, this))
       .setHeadingFilterCoeffs(R0, Q0)
       .setWheelPos1FilterCoeffs(R1, Q1)
       .setWheelPos2FilterCoeffs(R2, Q2)
@@ -49,7 +49,7 @@ To use your three wheel Kalman localizer, edit the fields as seen above in `Kalm
 It's pretty much the same thing as for the two wheel localizer but with a few name changes.
 
 ```java
-    setLocalizer(new KalmanThreeWheelLocalizer(new StandardTrackingWheelLocalizer(hardwareMap)
+    setLocalizer(new KalmanThreeWheelLocalizer(new StandardTrackingWheelLocalizer(hardwareMap))
       .setWheelPos1FilterCoeffs(R1, Q1)
       .setWheelPos2FilterCoeffs(R2, Q2)
       .setWheelPos3FilterCoeffs(R3, Q3)
