need to push to master rq

--- a/blacksmith-docs/docs/black-op/overview.mdx
+++ b/blacksmith-docs/docs/black-op/overview.mdx
@@ -23,7 +23,7 @@ An extension of the `LinearOpMode` class that adds a few extra utility features,
 
 ## Usage
 
-It's just like using `LinearOpMode`, just a couple minor differences.
+It's just like using `LinearOpMode`, just a couple minor differences:
 
 <Tabs groupId="programming-language">
 <TabItem value="java" label="Java">
